outputs/condor.error
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> ddb102e (fixed typos in bash scripts and condor file)
Could not find conda environment: 573-project
You can list all discoverable environments with `conda info --envs`.

  File "src/ensemble.py", line 23
    def __init__(self, roberta_config_path: str, forest_config_path: str, logreg_config_path: str) -> None:
                                          ^
SyntaxError: invalid syntax
<<<<<<< HEAD
Traceback (most recent call last):
  File "/projects/assigned/2122_ling573_elibales/repo/src/ensemble.py", line 191, in <module>
    main(args)
<<<<<<< HEAD
  File "/home2/apai3/ling573/src/ensemble.py", line 162, in main
    train_ensemble(ensemble_model, train_feature_vector, train_labels, train_data, device)
  File "/home2/apai3/ling573/src/ensemble.py", line 82, in train_ensemble
    print(batch.shape())
AttributeError: 'dict' object has no attribute 'shape'
  File "/home2/apai3/ling573/src/ensemble.py", line 144, in main
    train_ensemble(ensemble_model, train_feature_vector, train_labels, train_tokenized_input, device)
  File "/home2/apai3/ling573/src/ensemble.py", line 81, in train_ensemble
    outputs = ensemble.roberta_model(**roberta_input)
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/torch/nn/modules/module.py", line 1102, in _call_impl
    return forward_call(*input, **kwargs)
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/transformers/models/roberta/modeling_roberta.py", line 1206, in forward
    outputs = self.roberta(
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/torch/nn/modules/module.py", line 1102, in _call_impl
    return forward_call(*input, **kwargs)
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/transformers/models/roberta/modeling_roberta.py", line 853, in forward
    encoder_outputs = self.encoder(
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/torch/nn/modules/module.py", line 1102, in _call_impl
    return forward_call(*input, **kwargs)
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/transformers/models/roberta/modeling_roberta.py", line 526, in forward
    layer_outputs = layer_module(
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/torch/nn/modules/module.py", line 1102, in _call_impl
    return forward_call(*input, **kwargs)
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/transformers/models/roberta/modeling_roberta.py", line 412, in forward
    self_attention_outputs = self.attention(
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/torch/nn/modules/module.py", line 1102, in _call_impl
    return forward_call(*input, **kwargs)
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/transformers/models/roberta/modeling_roberta.py", line 339, in forward
    self_outputs = self.self(
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/torch/nn/modules/module.py", line 1102, in _call_impl
    return forward_call(*input, **kwargs)
  File "/home2/apai3/anaconda3/envs/573-project/lib/python3.9/site-packages/transformers/models/roberta/modeling_roberta.py", line 241, in forward
    attention_scores = torch.matmul(query_layer, key_layer.transpose(-1, -2))
RuntimeError: [enforce fail at CPUAllocator.cpp:61] . DefaultCPUAllocator: can't allocate memory: you tried to allocate 80518053888 bytes. Error code 12 (Cannot allocate memory)
=======
  File "/projects/assigned/2122_ling573_elibales/repo/src/ensemble.py", line 155, in main
    train_dataset = FineTuneDataset(train_sentences, train_labels)
NameError: name 'FineTuneDataset' is not defined
>>>>>>> 731cd07 (cleaning up messy merge)
=======
/home2/apai3/ling573/src/finetune_dataset.py:24: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).
=======
/projects/assigned/2122_ling573_elibales/repo/src/finetune_dataset.py:24: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).
>>>>>>> 91da272 (incorporated hurtlex)
  item = {key: torch.tensor(val[index]) for key, val in self.encodings.items()}
/projects/assigned/2122_ling573_elibales/repo/src/finetune_dataset.py:24: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).
  item = {key: torch.tensor(val[index]) for key, val in self.encodings.items()}
>>>>>>> 680c8ee (versioning outputs between v1 and v1 of ensemble model)
=======
Traceback (most recent call last):
  File "/home2/apai3/ling573/cmd/../src/ensemble.py", line 229, in <module>
    main(args)
  File "/home2/apai3/ling573/cmd/../src/ensemble.py", line 181, in main
    hurtlex_dict, hurtlex_feat_list = utils.read_from_tsv(args.hurtlex_path)
  File "/home2/apai3/ling573/src/utils.py", line 104, in read_from_tsv
    df = pd.read_csv(lex_data, sep='\t', header=0, usecols=[1,2,4])
  File "/projects/assigned/2122_ling573_elibales/env/573-project/lib/python3.9/site-packages/pandas/util/_decorators.py", line 311, in wrapper
    return func(*args, **kwargs)
  File "/projects/assigned/2122_ling573_elibales/env/573-project/lib/python3.9/site-packages/pandas/io/parsers/readers.py", line 680, in read_csv
    return _read(filepath_or_buffer, kwds)
  File "/projects/assigned/2122_ling573_elibales/env/573-project/lib/python3.9/site-packages/pandas/io/parsers/readers.py", line 575, in _read
    parser = TextFileReader(filepath_or_buffer, **kwds)
  File "/projects/assigned/2122_ling573_elibales/env/573-project/lib/python3.9/site-packages/pandas/io/parsers/readers.py", line 933, in __init__
    self._engine = self._make_engine(f, self.engine)
  File "/projects/assigned/2122_ling573_elibales/env/573-project/lib/python3.9/site-packages/pandas/io/parsers/readers.py", line 1217, in _make_engine
    self.handles = get_handle(  # type: ignore[call-overload]
  File "/projects/assigned/2122_ling573_elibales/env/573-project/lib/python3.9/site-packages/pandas/io/common.py", line 789, in get_handle
    handle = open(
FileNotFoundError: [Errno 2] No such file or directory: '/projects/assigned/2122_ling573_elibales/repo/src/data/hurtlex_en.tsv'
>>>>>>> 30455ed (tested refactorization)
=======
>>>>>>> ddb102e (fixed typos in bash scripts and condor file)
